--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
