--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.2.0",
+    "ckey": "^1.0.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21",
