--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SERVER_PORT=3000
-# MONGO_URL=mongodb+srv://zain:zain@cluster0.3632d.mongodb.net/Clinic-App?retryWrites=true&w=majority
-MONGO_URL=mongodb://localhost:27017/Clinic-App
+MONGO_URL=mongodb+srv://zain:zain@cluster0.3632d.mongodb.net/Clinic-App?retryWrites=true&w=majority
+# MONGO_URL=mongodb://localhost:27017/Clinic-App
