--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
       { "src": "./src/index.js", "use": "@vercel/node" }
     ],
     "routes": [
-        { "src": "/(.*)", "dest": "/" }
+        { "src": "/(.*)", "dest": "./src/index.js" }
     ]
 }
