--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/api/index.js",
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21",
+    "url": "^0.11.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
