--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "type": "module",
-  "name": "client-patient-app",
+  "name": "task-management-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple REST API to manage tasks with authentication",
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js",
@@ -20,7 +20,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^7.0.1",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1",
     "nodemon": "^2.0.21",
     "url": "^0.11.0",
     "yup": "^1.0.2"
